--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
   gtag('config', {{site.analytics}});
 </script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 	<meta charset="utf-8">
 	<title>{% if page.title %}{{page.title}} - {{site.title}}{% else %}{{site.title}}{% endif %}</title>
